--- a/css/main.css
+++ b/css/main.css
@@ -3,9 +3,8 @@
 
 body {
 	font-family: 'Lato', 'Helvetica Neue', 'Helvetica', sans-serif;
-	font-size: 18px;
+	font-size: 16px;
 	font-weight: 300;
-	background-image: url('../img/background.jpg');
 	background-size: cover;
 	background-attachment: fixed;
 }
@@ -43,15 +42,11 @@ h3 {
 }
 
 main {
-	margin-left: 30%;
-	margin-top: 20px;
-	margin-bottom: 20px;
-	margin-right: 20px;
 	background-image: url('../img/ricepaper_v3.png');
 	opacity: 0.9;
 }
 
-header, .info, .menu, .about, footer {
+header, #info, #menu, #about, footer {
 	padding: 1em;
 }
 
@@ -59,23 +54,25 @@ header {
 	background-color: #FA5A0F;
 	border-bottom: 5px solid #EA4A00;
 	color: #FFFFFF;
+	position: relative;
 }
 
-header > p {
+#tagline {
 	font-size: 120%;
 	color: #EEEEEE;
 	margin: 0;
+	display: none;
 }
 
-.menu {
+#menu {
 	background-color: rgba(207, 205, 140, 0.5);
 }
 
-.menu dt {
+#menu dt {
 	font-weight: 400;
 }
 
-.menu dd {
+#menu dd {
 	font-size: 80%;
 	font-style: italic;
 	margin-left: 1em;
@@ -87,4 +84,56 @@ footer {
 	border-top: 5px solid #EC791F;
 	font-size: 80%;
 	text-align: right;
+}
+
+.container-fluid {
+	margin-top: 0;
+	margin-bottom: 0;
+}
+
+nav > ul {
+	padding: 0;
+	margin: 0;
+}
+
+nav li {
+	list-style-type: none;
+	display: inline-block;
+	margin-right: 1em;
+}
+
+nav a:link, nav a:visited {
+	color: #55E;
+}
+
+nav a:hover, nav a:focus {
+	color: #00E;
+}
+
+.col-md-6 {
+	padding: 0;
+} 
+
+@media (min-width: 992px) {
+	body {
+		background-image: url('../img/background.jpg');
+		font-size: 18px;
+	}
+
+	.container-fluid {
+		margin-left: 30%;
+		margin-top: 20px;
+		margin-bottom: 20px;
+		margin-right: 20px;
+	}
+
+	#tagline {
+		display: block;
+	}
+
+	nav {
+		position: absolute;
+		top: 10px;
+		right: 10px;
+	}
 }
